# gildedrose

./: README.md  gilded_rose.py  pyproject.toml  test_gilded_rose.py
texttests/: config.gr
